# ai-protocol

./: README.md  pyproject.toml  requirements.txt
src/ai-protocol/: main.py
